--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <form class=" flex flex-col">
         <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="text" name="name" id="name" placeholder="name">
         <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="text" name="email" id="email" placeholder="email">
-        <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="text" name="password" id="password" placeholder="password">
-        <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="text" name="confPassword" id="confPassword" placeholder="confirm password">
-        <input class="p-4 my-4 mx-20 border-spacing-0 rounded-2xl w-48 bg-black text-white" type="button" value="Submit">
+        <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="password" name="password" id="password" placeholder="password">
+        <input class="p-4 my-4 mx-20 border-spacing-0 rounded-sm border-zinc-500" type="password" name="confPassword" id="confPassword" placeholder="confirm password">
+        <button class="p-4 my-4 mx-20 border-spacing-0 rounded-2xl w-48 bg-black text-white">Sign Up</button>
     </form>
+    <script src="app.js"></script>
 </body>
 </html>
